--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <script src="https://cdn.tailwindcss.com"></script>
         {% block stylesheets %}
         {% endblock %}
 
@@ -11,7 +12,16 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="min-h-screen flex flex-col items-center ">
+        <div class="flex-grow basis-3/5 ">
+            {% block body %}
+
+            {% endblock %}
+
+        </div>
+        <div class="flex justify-center">
+            <a class="w-full hover:underline basis-2/5 " href="{{ url('app_book') }}">Home</a>
+
+        </div>
     </body>
 </html>
