--- a/templates/author/edit.html.twig
+++ b/templates/author/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="flex flex-col items-center space-y-5">
-        <p class="text-3xl">Add Author</p>
+        <p class="text-3xl">Edit Author</p>
         <form action="{{ path('app_author_update', { id: author.id })}}" method="post" class="flex flex-col items-start space-y-2">
             <div class="flex w-72 justify-between">
                 <label class="" for="Username">Username</label>
