--- a/templates/book/edit.html.twig
+++ b/templates/book/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="flex flex-col items-center space-y-5">
-        <p class="text-3xl">Add Book</p>
+        <p class="text-3xl">Edit Book</p>
         <form action="{{ path('app_book_update', {'id': book.id}) }}" method="post" class="flex flex-col items-start w-96  ">
             <div class="w-full flex justify-between">
                 <label class="basis-1/3 w-28" for="Ref">Ref</label>
@@ -48,6 +48,5 @@
         {% for message in app.flashes('error') %}
             <p class="font-thick text-red-400">{{ message }}</p>
         {% endfor %}
-        <a class="hover:underline" href="{{ url('app_authors') }}">Home</a>
     </div>
 {% endblock %}
